	file.

	* ipmipower: Remove legacy options --ipmi-version (--driver-type
	since 0.7.1), --retry-wait-timeout (--retransmission-wait-timeout
	since 0.5.1), --retry-backoff-count
	(--retransmission-backoff-count since 0.5.1).

	* libfreeipmi/sel: Remove support of IPMI_SEL_STRING_FLAGS_LEGACY.
	The macro IPMI_SEL_STRING_FLAGS_LEGACY is no longer legal.

2020-01-28 Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Fix formatting typo that led to line not
	appearing in manpage.

2020-01-28 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/oem/intel/ipmi-sensor-and-event-code-tables-oem-intel-common-spec.h,
	libfreeipmi/sel/ipmi-sel-string-intel-xeon-common.c,
	libfreeipmi/sel/ipmi-sel-string-intel-xeon-broadwell-common.c:
	Move mirroring redundancy and some memory error macros / oem
	extensions from xeon to xeon broadwell common.  They do not belong
	in s2600bpb support.

	* libfreeipmi/include/freeipmi/spec/oem/intel/ipmi-sensor-and-event-code-tables-oem-intel-s2600bpb-spec.h,
	libfreeipmi/sel/ipmi-sel-string-intel-xeon-broadwell-common.c: add
	S2600BPB dimm OEM specific extensions.

2020-01-16 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h: Add
	Intel S2600BPB product id.

	* ipmi-oem/ipmi-oem-intel.c (_get_smtp_configuration_data)
	(_set_smtp_configuration_data),
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-spec.h:
	Update missing comments on motherboard support.

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-spec.h:
	Remove accidental Dell sensor types included in header.

	* libfreeipmi/include/freeipmi/spec/oem: Remove unnecessary
	includes of stdint.h.

	Begin Intel OEM extensions refactoring.

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-comp-code-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-event-reading-type-code-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-spec.h,