@@ -53,8 +53,6 @@ cmdline_config_file_parse (int key, char *arg, struct argp_state *state)
 
   switch (key)
     {
-      /* ARGP_CONFIG_KEY for backwards compatability */
-    case ARGP_CONFIG_KEY:
     case ARGP_CONFIG_FILE_KEY:
       free (common_args->config_file);
       if (!(common_args->config_file = strdup (arg)))
@@ -128,7 +126,6 @@ common_parse_opt (int key,
       common_args->driver_type = tmp;
       break;
       /* ARGP_NO_PROBING_KEY for backwards compatability */
-    case ARGP_NO_PROBING_KEY:
     case ARGP_DISABLE_AUTO_PROBE_KEY:
       common_args->disable_auto_probe = 1;
       break;
@@ -307,8 +304,6 @@ common_parse_opt (int key,
           common_args->k_g_len = rv;
       }
       break;
-      /* ARGP_TIMEOUT_KEY for backwards compatability */
-    case ARGP_TIMEOUT_KEY:
     case ARGP_SESSION_TIMEOUT_KEY:
       errno = 0;
       tmp = strtol (arg, &endptr, 0);
@@ -321,8 +316,6 @@ common_parse_opt (int key,
         }
       common_args->session_timeout = tmp;
       break;
-      /* ARGP_RETRY_TIMEOUT_KEY for backwards compatability */
-    case ARGP_RETRY_TIMEOUT_KEY:
     case ARGP_RETRANSMISSION_TIMEOUT_KEY:
       errno = 0;
       tmp = strtol (arg, &endptr, 0);
@@ -335,8 +328,6 @@ common_parse_opt (int key,
         }
       common_args->retransmission_timeout = tmp;
       break;
-      /* ARGP_AUTH_TYPE_KEY for backwards compatability */
-    case ARGP_AUTH_TYPE_KEY:
     case ARGP_AUTHENTICATION_TYPE_KEY:
       if ((tmp = parse_authentication_type (arg)) < 0)
         {
@@ -363,10 +354,6 @@ common_parse_opt (int key,
         }
       common_args->cipher_suite_id = tmp;
       break;
-      /* ARGP_PRIVILEGE_KEY for backwards compatability */
-      /* ARGP_PRIV_LEVEL_KEY for backwards compatability */     \
-    case ARGP_PRIVILEGE_KEY:
-    case ARGP_PRIV_LEVEL_KEY:
     case ARGP_PRIVILEGE_LEVEL_KEY:
       if ((tmp = parse_privilege_level (arg)) < 0)
         {
@@ -380,8 +367,6 @@ common_parse_opt (int key,
        * misc options
        */
 
-      /* ARGP_CONFIG_KEY for backwards compatability */
-    case ARGP_CONFIG_KEY:
     case ARGP_CONFIG_FILE_KEY:
       /* ignore config option - should have been parsed earlier */
       break;
