@@ -18,6 +18,10 @@
 	* libfreeipmi/sel: Remove support of IPMI_SEL_STRING_FLAGS_LEGACY.
 	The macro IPMI_SEL_STRING_FLAGS_LEGACY is no longer legal.
 
+	* common/toolcommon/tool-cmdline-common.h,
+	common/toolcommon/tool-cmdline-common.c: Remove many legacy
+	command line options.
+
 2020-01-28 Albert Chu <chu11@llnl.gov>
 
 	* man/ipmi-oem.8.pre.in: Fix formatting typo that led to line not
